# Cpp-Reflection

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp  main.h  matrix4.h  user.h
source/meta_parser/: CMakeLists.txt
source/meta_parser/parser/: main.cpp
source/meta_parser/parser/meta/: meta_utils.cpp  meta_utils.h
source/meta_parser/parser/parser/: parser.cpp  parser.h
source/parser/source/: ClangParser.cpp  ClangParser.h  Generator.cpp  Generator.h  main.cpp  reflection_type.h  utils.h
source/precompile/: precompile.cmake  precompile.json.in
source/reflection/: reflection_type.h
